# base-containers

./: .gitignore  README.md
.github/workflows/: build-and-push.yml
cloudnative-postgres/: Dockerfile  README.md
cloudnative-postgres/infra/: 00-namespace.yaml  01-minio-secret.yaml  02-minio-deployment.yaml  03-minio-service.yaml  04-app-secret.yaml  05-cluster.yaml  06-scheduled-backup.yaml
frontend-python/: Dockerfile  pyproject.toml
full-stack-ai-python/: Dockerfile  build.sh  pyproject.toml
full-stack-ai-python-nosql/: Dockerfile  pyproject.toml
mongo-search/: Dockerfile
node/: Dockerfile
node-no-certs/: Dockerfile  README.md  test.crt  test.js  test.key
postgres/: Dockerfile  build.sh
python-cplex/: Dockerfile  README.md  pyproject.toml  solve.py
rabbitmq/: Dockerfile
