[project]
name = "GENIE"
version = "0.1.0"
description = "GENIE Report Generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp==3.13.4",
    "boto3>=1.40.68",
    "celery[redis]>=5.5.3",
    "dirtyjson>=1.0.8",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.121.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "logger>=1.4",
    "moviepy==1.0.3",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pdf2docx==0.5.8",
    "pillow>=12.2.0",
    "pydantic>=2.12.4",
    "pydub>=0.25.1",
    "pymongo[aws]>=4.15.3",
    "pymupdf==1.26.4",
    "pypandoc-binary>=1.15",
    "python3-saml==1.16.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "reportlab>=4.4.4",
    "requests==2.33.0",
    "sse-starlette>=3.0.3",
    "uvicorn>=0.38.0",
    "filetype==1.2.0",
    "openai>=2.21.0",
]

[tool.uv]
constraint-dependencies = []
override-dependencies = []

[dependency-groups]
dev = ["pytest==9.0.3", "pytest-asyncio>=1.3.0"]

# set UV_DEFAULT_INDEX on your computer instead
# [[tool.uv.index]]
# url = "https://nexus.ngine.htd.gov.sg/repository/public-pypi-pxy/simple"
# default = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
