[project]
name = "full-stack-ai-python"
version = "0.1.0"
description = "Typical packages used in a full stack AI python app"
requires-python = "==3.12.*"
readme = "README.md"
dependencies = [
    "aiohttp==3.13.5",
    "boto3==1.39.4",
    "celery>=5.5.3",
    "cryptography==46.0.6",
    "demjson3==3.0.6",
    "fastapi==0.121.1",
    "fastapi-csrf-protect>=1.0.7",
    "filelock==3.20.3",
    "filetype>=1.2.0",
    "itsdangerous==2.2.0",
    "librosa==0.11.0",
    "litellm>=1.79.2",
    "pandas==2.3.1",
    "polars==1.31.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow==20.0.0",
    "pydantic==2.11.7",
    "pymysql==1.1.1",
    "python3-saml==1.16.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.22",
    "pyyaml==6.0.2",
    "requests==2.33.1",
    "setuptools==80.10.2",
    "soundfile==0.13.1",
    "speechmatics-batch==0.4.6",
    "sqlmodel==0.0.24",
    "starlette==0.49.1",
    "tenacity==8.2.3",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers==4.53.2",
    "urllib3==2.6.3",
    "uvicorn==0.35.0",
    "uvicorn-worker==0.3.0",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest==8.3.5"]
cpu = ["torch==2.8.0", "torchaudio==2.8.0"]

[tool.uv]
default-groups = ["dev", "cpu"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "cpu"},
]
torchaudio = [
    { index = "pytorch-cpu", group = "cpu"},
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

