[project]
name = "eom-backend"
version = "0.1.0"
requires-python = ">=3.12.3"
dependencies = [
    "cplex>=22.1.0.0",
    "cryptography>=46.0.3",
    "docplex>=2.30.251",
    "flask==3.1.3",
    "flask-cors>6.0.0",
    "flask-socketio==5.6.1",
    "flask-sqlalchemy==3.0.3",
    "gevent>=25.9.1",
    "gevent-websocket>=0.10.1",
    "numpy>1.23.5",
    "openpyxl==3.1.3",
    "pandas>1.3.5",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.10",
    "pyjwt>=2.10.1",
    "python3-saml>=1.16.0",
    "requests>=2.32.4",
    "sqlalchemy==2.0.9",
    "urllib3>=2.6.0", # Required for `requests`
    "xlsxwriter==3.2.0",
]
 
[dependency-groups]
dev = ["typing-extensions==4.12.2"]
 
[tool.uv]
constraint-dependencies = ["werkzeug>=3.0.6"]